added links to projects secion

--- a/index.html
+++ b/index.html
@@ -76,15 +76,40 @@
 
 			<section id="dev" style="position:fixed; top:50%; left: 50%; width: 50%">
 				<div id="dev-1a" class="section-inactive">And started my first project:</div>
-				<div id="dev-1" class="section-inactive"><em>www.tunemuze.com</em></div>
+				<div id="dev-1" class="section-inactive">
+					<a href="http://tunemuze.com/" target="_blank" style="text-decoration: none;">
+						<em>www.tunemuze.com</em>
+					</a>
+				</div>
 
 				<div style="position:absolute; width:100%; padding-top:20px">
 					<div id="dev-2a" class="section-inactive" style="padding-left:10px">A few others:</div>
 					<div id="dev-2" class="section-inactive" style="padding-left:15px"><em>iOS</em> contract work for Faro10</div>
-					<div id="dev-3" class="section-inactive" style="padding-left:15px">HTML parser in <em>Node.js</em></div>
-					<div id="dev-4" class="section-inactive" style="padding-left:15px">Feedly replica in C#</div>
-					<div id="dev-5" class="section-inactive" style="padding-left:15px">Tech talent south for <em>Ruby on Rails</em></div>
-					<div id="dev-6" class="section-inactive" style="padding-left:15px">Thnkful bootcamp for <em>Python</em></div>
+					<div id="dev-3" class="section-inactive" style="padding-left:15px">
+						Location based reminders app in
+						<em>Swift</em>
+						<a href="https://github.com/mxpaspa/grocery-store-app" target="_blank" style="text-decoration: none;">
+							<img src="./images/Github-Mark-32px.png" style="width:16px;height:16px;">
+						</a>
+					</div>
+					<div id="dev-4" class="section-inactive" style="padding-left:15px">Currency converter CLI in
+						<em>Node.js</em>
+						<a href="https://github.com/mxpaspa/currency-converter-cli" target="_blank" style="text-decoration: none;">
+							<img src="./images/Github-Mark-32px.png" style="width:16px;height:16px;">
+						</a>
+					</div>
+					<div id="dev-5" class="section-inactive" style="padding-left:15px">HTML parser API in
+						<em>Node.js</em>
+						<a href="https://github.com/mxpaspa/node_project" target="_blank" style="text-decoration: none;">
+							<img src="./images/Github-Mark-32px.png" style="width:16px;height:16px;">
+						</a>
+					</div>
+					<div id="dev-6" class="section-inactive" style="padding-left:15px">Uptime monitoring API
+						<em>Node.js</em>
+						<a href="https://github.com/mxpaspa/uptime_app" target="_blank" style="text-decoration: none;">
+							<img src="./images/Github-Mark-32px.png" style="width:16px;height:16px;">
+						</a>
+					</div>
 				</div>
 				<div id="dev-7" class="section-inactive" style="padding-left:15px; position:absolute; top: 30%;">
 					<a href="https://github.com/mxpaspa" target="_blank" style="text-decoration: none; color:white;z-index:10;">github.com/mxpaspa</a>
