--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
 						Location based reminders app in
 						<em>Swift</em>
 						<a href="https://github.com/mxpaspa/grocery-store-app" target="_blank" style="text-decoration: none;">
-							<img src="images/Github-Mark-32px.png" style="width:16px;height:16px;">
+							<img src="node_portfolio/images/Github-Mark-32px.png" style="width:16px;height:16px;">
 						</a>
 					</div>
 					<div id="dev-4" class="section-inactive" style="padding-left:15px">Currency converter CLI in
 						<em>Node.js</em>
 						<a href="https://github.com/mxpaspa/currency-converter-cli" target="_blank" style="text-decoration: none;">
-							<img src="images/Github-Mark-32px.png" style="width:16px;height:16px;">
+							<img src="node_portfolio/images/Github-Mark-32px.png" style="width:16px;height:16px;">
 						</a>
 					</div>
 					<div id="dev-5" class="section-inactive" style="padding-left:15px">HTML parser API in
 						<em>Node.js</em>
 						<a href="https://github.com/mxpaspa/node_project" target="_blank" style="text-decoration: none;">
-							<img src="images/Github-Mark-32px.png" style="width:16px;height:16px;">
+							<img src="node_portfolio/images/Github-Mark-32px.png" style="width:16px;height:16px;">
 						</a>
 					</div>
 					<div id="dev-6" class="section-inactive" style="padding-left:15px">Uptime monitoring API
 						<em>Node.js</em>
 						<a href="https://github.com/mxpaspa/uptime_app" target="_blank" style="text-decoration: none;">
-							<img src="images/Github-Mark-32px.png" style="width:16px;height:16px;">
+							<img src="node_portfolio/images/Github-Mark-32px.png" style="width:16px;height:16px;">
 						</a>
 					</div>
 				</div>
