fixed mobile CSS

--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
 
 
 
-	    <section id="max" style="position:fixed; top:20%; left: 60%">
+	    <section class="max" id="max">
 				<div id="max1" class="section-inactive">I'm <em>Max</em></div>
 
 				<div id="max2" class="section-inactive" style="padding-left:10px">Here's a bit about me</div>
 	    </section>
 
-			<section id="business-analyst" style="position:fixed; top:30%; left: 50%">
+			<section class="business-analyst" id="business-analyst">
 				<div id="business-analyst-1" class='section-inactive'>Currently a Business Analyst</div>
 				<div id="business-analyst-2" class='section-inactive' style="padding-left:10px">ConnectWise Control, Raleigh NC</div>
 				<div id="business-analyst-3" class='section-inactive' style="padding-left:20px">I'm part of a team that produces</div>
 				<div id="business-analyst-4" class='section-inactive'style="padding-left:15px"><em>extensions and integrations</em></div>
 	    </section>
 
-			<section id="mba" style="position:fixed; top:40%; left: 55%">
+			<section class="mba" id="mba">
 				<div id="mba-1" class="section-inactive">I also have an <em>MBA</em></div>
 				<div id="mba-2" class="section-inactive">Appalachian State, International Business</div>
 				<div id="mba-3" class="section-inactive">While in MBA, <em>I learned about software...</em></div>
 	    </section>
 
-			<section id="dev" style="position:fixed; top:50%; left: 50%; width: 50%">
+			<section class="dev" id="dev">
 				<div id="dev-1a" class="section-inactive">And started my first project:</div>
 				<div id="dev-1" class="section-inactive">
 					<a href="http://tunemuze.com/" target="_blank" style="text-decoration: none;">
@@ -82,7 +82,7 @@
 					</a>
 				</div>
 
-				<div style="position:absolute; width:100%; padding-top:20px">
+				<div id="dev-projects" style="position:absolute; width:100%; padding-top:20px">
 					<div id="dev-2a" class="section-inactive" style="padding-left:10px">A few others:</div>
 					<div id="dev-2" class="section-inactive" style="padding-left:15px"><em>iOS</em> contract work for Faro10</div>
 					<div id="dev-3" class="section-inactive" style="padding-left:15px">
