--- a/index.html
+++ b/index.html
@@ -23,118 +23,107 @@
 	</head>
 
 	<body id="main">
-		<div id="videoWrapper">
-			<canvas id="videoCanvas"></canvas>
-			<nav id="indicatorContainer">
-				<div id="indicator"></div>
-				<div id="navGroup" style="top:0%">
-					<span id="section1-0"></span>
 
-				</div>
+		<nav id="indicatorContainer">
+			<div id="indicator"></div>
+			<div id="navGroup" style="top:0%">
+				<span id="section1-0"></span>
 
-				<div id="navGroup" style="top:25%">
-					<span id="section2-136"></span>
+			</div>
 
-				</div>
+			<div id="navGroup" style="top:25%">
+				<span id="section2-136"></span>
 
-				<div id="navGroup" style="top:40%">
-					<span id="section3-218"></span>
+			</div>
 
-				</div>
+			<div id="navGroup" style="top:40%">
+				<span id="section3-218"></span>
 
-				<div id="navGroup" style="top:60%">
-					<span id="section4-327"></span>
+			</div>
 
-				</div>
+			<div id="navGroup" style="top:60%">
+				<span id="section4-327"></span>
 
-				<div id="navGroup" style="top:97%;">
-					<span id="section5-530"></span>
+			</div>
 
-				</div>
-			</nav>
+			<div id="navGroup" style="top:97%;">
+				<span id="section5-530"></span>
 
+			</div>
+		</nav>
 
+		<section class="max" id="max">
+			<div id="max1" class="section-inactive">I'm <em>Max</em></div>
+			<div id="max2" class="section-inactive">Here's a bit about me</div>
+		</section>
 
-	    <section class="max" id="max">
-				<div id="max1" class="section-inactive">I'm <em>Max</em></div>
+		<section class="business-analyst" id="business-analyst">
+			<div id="business-analyst-1" class='section-inactive'>Currently a Business Analyst</div>
+			<div id="business-analyst-2" class='section-inactive' style="padding-left:10px">ConnectWise Control, Raleigh NC</div>
+			<div id="business-analyst-3" class='section-inactive' style="padding-left:20px">I'm part of a team that produces</div>
+			<div id="business-analyst-4" class='section-inactive'style="padding-left:15px"><em>extensions and integrations</em></div>
+		</section>
 
-				<div id="max2" class="section-inactive" style="padding-left:10px">Here's a bit about me</div>
-	    </section>
+		<section class="mba" id="mba">
+			<div id="mba-1" class="section-inactive">I also have an <em>MBA</em></div>
+			<div id="mba-2" class="section-inactive">Appalachian State, International Business</div>
+			<div id="mba-3" class="section-inactive">While in MBA, <em>I got involved in software...</em></div>
+		</section>
 
-			<section class="business-analyst" id="business-analyst">
-				<div id="business-analyst-1" class='section-inactive'>Currently a Business Analyst</div>
-				<div id="business-analyst-2" class='section-inactive' style="padding-left:10px">ConnectWise Control, Raleigh NC</div>
-				<div id="business-analyst-3" class='section-inactive' style="padding-left:20px">I'm part of a team that produces</div>
-				<div id="business-analyst-4" class='section-inactive'style="padding-left:15px"><em>extensions and integrations</em></div>
-	    </section>
+		<section class="dev" id="dev">
+			<div id="dev-1a" class="section-inactive">And started my first project:</div>
+			<div id="dev-1" class="section-inactive">
+				<a href="http://tunemuze.com/" target="_blank" style="text-decoration: none;">
+					<em>www.tunemuze.com</em>
+				</a>
+			</div>
 
-			<section class="mba" id="mba">
-				<div id="mba-1" class="section-inactive">I also have an <em>MBA</em></div>
-				<div id="mba-2" class="section-inactive">Appalachian State, International Business</div>
-				<div id="mba-3" class="section-inactive">While in MBA, <em>I learned about software...</em></div>
-	    </section>
-
-			<section class="dev" id="dev">
-				<div id="dev-1a" class="section-inactive">And started my first project:</div>
-				<div id="dev-1" class="section-inactive">
-					<a href="http://tunemuze.com/" target="_blank" style="text-decoration: none;">
-						<em>www.tunemuze.com</em>
+			<div id="dev-projects" style="position:absolute; width:100%; padding-top:20px">
+				<div id="dev-2a" class="section-inactive" style="padding-left:10px">A few others:</div>
+				<div id="dev-2" class="section-inactive" style="padding-left:15px"><em>iOS</em> contract work for Faro10</div>
+				<div id="dev-3" class="section-inactive" style="padding-left:15px">
+					Location based reminders app in
+					<em>Swift</em>
+					<a href="https://github.com/mxpaspa/grocery-store-app" target="_blank" style="text-decoration: none;">
+						<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
 					</a>
 				</div>
-
-				<div id="dev-projects" style="position:absolute; width:100%; padding-top:20px">
-					<div id="dev-2a" class="section-inactive" style="padding-left:10px">A few others:</div>
-					<div id="dev-2" class="section-inactive" style="padding-left:15px"><em>iOS</em> contract work for Faro10</div>
-					<div id="dev-3" class="section-inactive" style="padding-left:15px">
-						Location based reminders app in
-						<em>Swift</em>
-						<a href="https://github.com/mxpaspa/grocery-store-app" target="_blank" style="text-decoration: none;">
-							<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
-						</a>
-					</div>
-					<div id="dev-4" class="section-inactive" style="padding-left:15px">Currency converter CLI in
-						<em>Node.js</em>
-						<a href="https://github.com/mxpaspa/currency-converter-cli" target="_blank" style="text-decoration: none;">
-							<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
-						</a>
-					</div>
-					<div id="dev-5" class="section-inactive" style="padding-left:15px">HTML parser API in
-						<em>Node.js</em>
-						<a href="https://github.com/mxpaspa/node_project" target="_blank" style="text-decoration: none;">
-							<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
-						</a>
-					</div>
-					<div id="dev-6" class="section-inactive" style="padding-left:15px">Uptime monitoring API
-						<em>Node.js</em>
-						<a href="https://github.com/mxpaspa/uptime_app" target="_blank" style="text-decoration: none;">
-							<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
-						</a>
-					</div>
+				<div id="dev-4" class="section-inactive" style="padding-left:15px">Currency converter CLI in
+					<em>Node.js</em>
+					<a href="https://github.com/mxpaspa/currency-converter-cli" target="_blank" style="text-decoration: none;">
+						<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
+					</a>
 				</div>
-				<div id="dev-7" class="section-inactive" style="padding-left:15px; position:absolute; top: 30%;">
-					<a href="https://github.com/mxpaspa" target="_blank" style="text-decoration: none; color:white;z-index:10;">github.com/mxpaspa</a>
-					 |
-					<a href="mailto:maxpaspa@gmail.com" target="_blank" style="text-decoration: none; color:white;z-index:10;">mxpaspa@gmail.com</a>
+				<div id="dev-5" class="section-inactive" style="padding-left:15px">HTML parser API in
+					<em>Node.js</em>
+					<a href="https://github.com/mxpaspa/node_project" target="_blank" style="text-decoration: none;">
+						<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
+					</a>
 				</div>
-	    </section>
+				<div id="dev-6" class="section-inactive" style="padding-left:15px">Uptime monitoring API
+					<em>Node.js</em>
+					<a href="https://github.com/mxpaspa/uptime_app" target="_blank" style="text-decoration: none;">
+						<img src="/images/GitHub-Mark-32px.png" style="width:16px;height:16px;">
+					</a>
+				</div>
+			</div>
+			<div id="dev-7" class="section-inactive" style="padding-left:15px; position:absolute; top: 30%;">
+				<a href="https://github.com/mxpaspa" target="_blank" style="text-decoration: none; color:white;z-index:10;">github.com/mxpaspa</a>
+				 | <br />
+				<a href="mailto:maxpaspa@gmail.com" target="_blank" style="text-decoration: none; color:white;z-index:10;">mxpaspa@gmail.com</a>
+			</div>
+		</section>
 
-			<div id="progress-spinner-prism">
-        <div class="prism-container">
-          <div class="prism">
-            <div class="shape">
-              <div class="side back"></div>
-              <div class="axis depth"></div>
-              <div class="axis height"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-		</div>
+		<div class="videoWrapper" id="videoWrapper">
+			<canvas class="canvas" id="videoCanvas"></canvas>
 
-		<div class="loader-wrapper">
-		  <div class="loader-outer">
-		    <div class="loader-inner"></div>
-		  </div>
+
+
+			<div class="loader-wrapper">
+			  <div class="loader-outer">
+			    <div class="loader-inner"></div>
+			  </div>
+			</div>
 		</div>
 
 		<div id="scrollNull" style="width:1px; height:5000%; background:transparent; pointer-events:none;"></div>
