--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 		<nav id="indicatorContainer">
 			<div id="indicator"></div>
 			<div id="navGroup" style="top:0%">
-				<span id="section1-0"></span>
+				<span class="inner" id="section1-0"></span>
 
 			</div>
 
 			<div id="navGroup" style="top:25%">
-				<span id="section2-136"></span>
+				<span class="inner" id="section2-136"></span>
 
 			</div>
 
 			<div id="navGroup" style="top:40%">
-				<span id="section3-218"></span>
+				<span class="inner" id="section3-218"></span>
 
 			</div>
 
 			<div id="navGroup" style="top:60%">
-				<span id="section4-327"></span>
+				<span class="inner" id="section4-327"></span>
 
 			</div>
 
 			<div id="navGroup" style="top:97%;">
-				<span id="section5-530"></span>
+				<span class="inner" id="section5-530"></span>
 
 			</div>
 		</nav>
