scrolling behaviors in chrome mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<title></title>
 	</head>
 
-	<body id="main" onload="scroll()">
+	<body id="main">
 
 		<nav id="indicatorContainer">
 			<div id="indicator"></div>
@@ -128,8 +128,5 @@
 
 		<div id="scrollNull" style="width:1px; height:5000%; background:transparent; pointer-events:none;"></div>
 
-		<script>
-		window.scroll(0,0);
-		</script>
 	</body>
 </html>
