--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html id="test" style="-webkit-overflow-scrolling: touch; overflow:scroll;">
 
 	<head>
+		<meta name="viewport" content="width=devicewidth, minimal-ui">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- <script src="static/skrollr.min.js"></script> -->
 		<script src="/scroll.js"></script>
