updated job title

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 		</section>
 
 		<section class="business-analyst" id="business-analyst">
-			<div id="business-analyst-1" class='section-inactive'>Currently a Business Analyst</div>
-			<div id="business-analyst-2" class='section-inactive' style="padding-left:10px">ConnectWise Control, Raleigh NC</div>
-			<div id="business-analyst-3" class='section-inactive' style="padding-left:20px">I'm part of a team that produces</div>
-			<div id="business-analyst-4" class='section-inactive'style="padding-left:15px"><em>extensions and integrations</em></div>
+			<div id="business-analyst-1" class='section-inactive'>Currently a Software Developer</div>
+			<div id="business-analyst-2" class='section-inactive' style="padding-left:10px">NC State, Raleigh NC</div>
+			<div id="business-analyst-3" class='section-inactive' style="padding-left:20px">I'm part of a team that develops on</div>
+			<div id="business-analyst-4" class='section-inactive'style="padding-left:15px"><em>Security applications</em></div>
 		</section>
 
 		<section class="mba" id="mba">
